# c-compat

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
headers/: assert.h  common.h  inttypes.h  math.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
src/: lib.rs  math.rs  stdlib.rs
