[package]
name = "c-compat"
version = "0.0.1"
edition = "2024"
authors = ["Alessandro Gasbarroni <alex.gasbarroni@gmail.com>"]
description = "Allows to easily compile and integrate C libraries in Rust in a cross-platform way"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lakier15/c-compat"
readme = "README.md"

[dependencies]
